--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <title>Alwyn Ong</title>
   </head>
 
